refactor(architecture): Refactored classes to new architecture

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: my_debtors
+name: mydebtors
 description: "Aplication with my debtors"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
